<resources>
    <string name="app_name">MaReu</string>
    <string name="your_meeting_subject">Your meeting subject</string>
    <string name="select_your_room">Select your room :</string>
    <string name="select_your_date">Select your date</string>
    <string name="select_the_starting_hour">Select the starting hour</string>
    <string name="select_your_ending_hour">Select your ending hour</string>
    <string name="select_your_guests_emails">Select your guests emails</string>
    <string name="ok">ok</string>
    <string name="subject">subject</string>
    <string name="date">date</string>
    <string name="hour">hour</string>
    <string name="room">room</string>
    <string name="guests">guests</string>


    <string-array name="rooms">
        <item>Mario</item>
        <item>Peach</item>
        <item>Yoshi</item>
        <item>Wario</item>
        <item>Bowser</item>
        <item>Luigi</item>
        <item>Toad</item>
        <item>Daisy</item>
        <item>Bob omb</item>
        <item>Maskass</item>

    </string-array>

    <string name="display_date_format">dd/MM/yyyy</string>
    <string name="display_hour_format">HH:mm</string>

    <integer name="default_minute">1</integer>
    <integer name="default_hour">12</integer>
    <integer name="default_year">2021</integer>
    <integer name="default_month">1</integer>
    <integer name="default_day">1</integer>

    <string name="empty_infos">Please fill all the fields !</string>
    <string name="select_your_hour">Select your hour</string>
    <string name="filter_by_date">filter by date</string>
    <string name="filter_by_room">filter by room</string>
    <string name="show_all_meetings">show all meetings</string>

    <string name="room_filter">Please choose a room</string>
    <string name="date_filter">Please choose a date</string>
    <string name="subject_hour_room">Subject - hour - room</string>


</resources>